# discord-message-tracker

./: README.md  pyproject.toml
discord_message_tracker/: config.py  tracker_bot.py
